@@ -55,19 +55,10 @@ ac_add_options --disable-jemalloc
 ac_add_options --enable-valgrind
 mk_add_options MOZ_MAKE_FLAGS=-j4
 %%endif
-%%ifdef DEB_ENABLE_IPC
-ac_add_options --enable-ipc
-%%else
-ac_add_options --disable-ipc
-%%endif
 %%ifdef DEB_WANT_UNIT_TESTS
 ac_add_options --enable-tests
 ac_add_options --enable-mochitest
-%%ifdef DEB_ENABLE_IPC
 ac_add_options --enable-ipdl-tests
-%%else
-ac_add_options --disable-ipdl-tests
-%%endif
 %%else
 ac_add_options --disable-tests
 ac_add_options --disable-mochitest
