@@ -22,8 +22,6 @@ MOZCLIENT_PROJECTDIR		:= $(CURDIR)/debian/mozclient
 DEB_MIN_SYSDEPS		?= 1
 # 1 - Use system libxul
 DEB_SYS_LIBXUL		?= 0
-# 1 = Enable IPC (if supported)
-DEB_ENABLE_IPC		?= 1
 # 1 = Enable crashreporter (if supported)
 DEB_ENABLE_BREAKPAD	?= 1
 # 1 = Disable official branding and crash reporter (the crash reporter builds but is not enabled in application.ini)
@@ -139,11 +137,10 @@ else
 	DEBIAN_XUL_VER	= $(shell tail -1 $(DEB_BUILDDIR)/config/milestone.txt)
 endif
 
-# enable IPC and the crash reporter only on i386, amd64 and armel
+# enable the crash reporter only on i386, amd64 and armel
 ifeq (,$(findstring i386,$(DEB_BUILD_ARCH)))
 ifeq (,$(findstring amd64,$(DEB_BUILD_ARCH)))
 ifeq (,$(findstring armel,$(DEB_BUILD_ARCH)))
-	DEB_ENABLE_IPC		= 0
 	DEB_ENABLE_BREAKPAD	= 0
 endif
 endif
@@ -229,9 +226,6 @@ ifeq (1, $(DEB_MIN_SYSDEPS))
 endif
 ifeq (1, $(DEB_SYS_LIBXUL))
 	DEB_DEFINES += -DDEB_SYS_LIBXUL
-endif
-ifeq (1, $(DEB_ENABLE_IPC))
-	DEB_DEFINES += -DDEB_ENABLE_IPC
 endif
 ifeq (1, $(DEB_ENABLE_BREAKPAD))
 	DEB_DEFINES += -DDEB_ENABLE_BREAKPAD
